# xyz_modern_gl

./: CMakeLists.txt  LICENSE  README.md  main.cpp  surface.h
rendering/: basicgl.h  camera.cpp  camera.h  cloud.cpp  cloud.h  include.h  main.cpp  material.h  object.cpp  object.h  render_text.h  shader.cpp  shader.h  vertexattributes.cpp  vertexattributes.h
xyz_io/: xyz_io.cpp
